--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>api_V01</artifactId>
   <version>0.1</version>
 
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>api</name>
   <url>http://maven.apache.org</url>
@@ -36,10 +36,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
